--- a/mainPage.html
+++ b/mainPage.html
@@ -27,9 +27,8 @@
 	<!-- awesomemarkers -->
 	<script src="./js/leaflet.awesome-markers.min.js"></script>
 
+	<script src="./js/AnimatedMarker.js"></script>
 
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.10.5/typeahead.bundle.min.js"></script>
 
 
 
@@ -40,28 +39,26 @@
 	<link rel="stylesheet" href="./css/bootstrap.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css">
-	<link rel="stylesheet" href="./css/MarkerCluster.css">
-	<link rel="stylesheet" href="./css/MarkerCluster.Default.css">
 	<link rel="stylesheet" href="./css/bootleaf.css">
-	
+
 </head>
 
 <body>
-<div id="container">
-<!-- navigation bar -->
-	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-		<div class="container-fluid">
+	<div id="container">
+		<!-- navigation bar -->
+		<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+			<div class="container-fluid">
 
-			<div class="navbar-header" id="mapheader">
-				<a class="navbar-brand mapheader" id="about-btn"  href="#">HACKOHI/O</a>
-			</div>
-			<div class="navbar-collapse collapse">
+				<div class="navbar-header" id="mapheader">
+					<a class="navbar-brand mapheader" id="about-btn" href="#">HACKOHI/O</a>
+				</div>
+				<div class="navbar-collapse collapse">
 
+				</div>
+				<!--/.navbar-collapse -->
 			</div>
-			<!--/.navbar-collapse -->
 		</div>
-	</div>
-<div id="map">
+		<div id="map">
 
 			<div id="loading" style="display: none;">
 				<div class="loading-indicator">
@@ -73,10 +70,10 @@
 
 		</div>
 
-</div>
+	</div>
 
 
-<!-- app.js -->
+	<!-- main.js -->
 	<script src="./script/main.js"></script>
 </body>
 
